# aws-gameday-nfl-2024

./: .envrc.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/nfl/: README.md  build.sh  human.ai  index.html  package-lock.json  package.json  pyproject.toml  static_website.yaml
app/nfl/src/: App.tsx  theme.tsx  types.ts
app/nfl/src/Components/BoardItems/Sample/: FavoritePlayers.tsx  MyDreamTeam.tsx  MyFavoritePlayers.css  MyFavoritePlayers.tsx
app/nfl/src/Components/BoardItems/Task1/: PlayerDetail.tsx  Players.tsx  hooks.ts  utils.ts
app/nfl/src/Components/BoardItems/Task2/: EmbeddedUi.tsx
app/nfl/src/Components/BoardItems/Task3/: ChangeMe3.tsx
app/nfl/src/Components/ErrorPage/: Error.tsx
app/nfl/src/Components/MainContent/: MainContent.tsx
app/nfl/src/Components/Navigation/: Navigation.tsx
app/nfl/src/Components/Tools/: Tools.tsx
app/nfl/src/Components/Utils/: UsePersiState.tsx
docs/event-info/: event-details.md
lambda/create-quicksight-subscription/: template.yml
lambda/create-quicksight-subscription/src/: cfn_response.py  create_qs_subscription.py
lambda/create-quicksight-subscription/src/cfnresponse-1.1.5.dist-info/: RECORD
scripts/: deploy.sh  explore_data.py  list-resources.sh  list-task1.sh  sync-gameday-data.sh  test-endpoints.sh
