[tool.poetry]
name = "aws-gameday-nfl-2024"
version = "0.1.0"
description = ""
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
files-to-prompt = "^0.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
